iOS letter-spacing fix 2.0

--- a/src/components/CardList/cardList.scss
+++ b/src/components/CardList/cardList.scss
@@ -143,6 +143,7 @@
     .info {
       h4 {
         font-size: fonts.$h3;
+        font-weight: normal;
         margin-bottom: 0.5rem;
       }
 
