--- a/src/components/SectionTitle/sectionTitle.scss
+++ b/src/components/SectionTitle/sectionTitle.scss
@@ -15,6 +15,7 @@
     h4 {
       width: 100%;
       font-size: fonts.$h4;
+      font-weight: normal;
       margin: 1.5rem 0 0.5rem 0;
       text-transform: uppercase;
     }
