--- a/src/components/Title/title.scss
+++ b/src/components/Title/title.scss
@@ -15,6 +15,7 @@
   h1 {
     font-size: 9vw;
     margin: 0;
+    font-weight: normal;
   }
 
   .status {
